# oxideterm

./: .editorconfig  .gitignore  PLUGIN_DEVELOPMENT.md  README.fr.md  README.md  README.old.md  README.zh-CN.md  package.json  plugin-api.d.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
agent/: Cargo.toml
agent/src/: fs_ops.rs  main.rs  protocol.rs
agents/: README.md
cli/: Cargo.toml
cli/src/: connect.rs  main.rs  output.rs  protocol.rs  terminal.rs  wire.rs
docs/readme/: README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.pt-BR.md  README.vi.md  README.zh-Hans.md  README.zh-Hant.md
docs/reference/: CLI_COMPANION.md  OXIDETERM_CORE_REFERENCE.md  PLUGIN_DEVELOPMENT.md  PLUGIN_SYSTEM.md  plugin-api.d.ts
scripts/: build-agent.sh  bump-version.cjs  cloud-sync-plugin-e2e.mjs
src/: App.tsx  THIRD_PARTY_NOTICES.md  i18n.ts  styles.css
src-tauri/: Cargo.toml  THIRD_PARTY_NOTICES.md  tauri.conf.json
src-tauri/agents/: oxideterm-agent-aarch64-linux-musl  oxideterm-agent-x86_64-linux-musl
src-tauri/src/: lib.rs  path_utils.rs
src/hooks/: useConfirm.tsx
src/lib/: agentService.ts  api.ts  fileIcons.tsx  oxideClientState.ts  shortcuts.ts  sidebarContextProvider.ts  terminalHelpers.ts  terminalRegistry.ts  utils.test.ts  wireProtocol.ts
src/store/: agentStore.ts  aiChatStore.ts  appStore.ts  broadcastStore.ts  ideStore.ts  launcherStore.ts  localTerminalStore.ts  profilerStore.ts  ragStore.ts  reconnectOrchestratorStore.ts  (+5 more)
website/: index.html  styles.css
(+305 files in other folders)
