[package]
name = "oxide-cli"
version = "0.21.0"
edition = "2021"
description = "CLI companion for OxideTerm"
authors = ["OxideTerm Team"]
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"

[[bin]]
name = "oxt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
termimad = "0.30"
tungstenite = { version = "0.24", features = ["handshake"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
whoami = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z"
